<resources>
    <string name="app_name">Sapi órarend</string>
    <string name="title_activity_main_screen">Sapi órarend</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <!--Android Manifest-->>
    <string name="android_manifest_login">Bejelentkező képernyő</string>
    <string name="android_manifest_signup">Feljelentkező képernyő</string>
    <string name="android_manifest_main">Főképernyő</string>
    <string name="android_manifest_lunch">Ebédlő képernyő</string>
    <string name="android_manifest_map">Térkép képernyő</string>
    <string name="android_manifest_send_message">Üzenet kűldés képernyő</string>
    <string name="android_manifest_settings">Beállítások képernyő</string>
    <string name="android_manifest_received_messages">Bejövő üzenetek képernyő</string>
    <string name="android_manifest_authentificate">Jelszó ellenőrző képernyő</string>

    <!-- TODO: Remove or change this placeholder text -->

    <!--Profile screen string-->
    <string name="profile_screen_name">Név:</string>
    <string name="profile_screen_phone">Telefon:</string>
    <string name="profile_screen_email">E-mail:</string>
    <string name="profile_screen_class">Szak:</string>
    <string name="profile_screen_year">Évfolyam:</string>
    <string name="profile_screen_signout">Kijelentkezés</string>
    <string name="profile_screen_null">Unspecified</string>
    <string name="profile_screen_picture">Profilkép</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>

    <!--Login screen strings-->
    <string name="login_screen_email">E-mail address</string>
    <string name="login_screen_phone">Phone number</string>
    <string name="login_screen_password">Password</string>
    <string name="login_screen_login">Login</string>
    <string name="login_screen_or">Or</string>
    <string name="login_screen_guest">Use app as a guest user</string>
    <string name="login_screen_signup">Sign Up</string>

    <!--Sign up screen strings-->
    <string name="signup_screen_email">E-mail address</string>
    <string name="signup_screen_phone">Phone number</string>
    <string name="signup_screen_password">Password</string>
    <string name="signup_screen_password2">Re-enter password</string>
    <string name="signup_screen_signup">Sign up</string>
    <string name="signup_screen_accept">I Accept</string>
    <string name="signup_screen_deny">I refuse</string>
    <string name="signup_screen_name">Name</string>
    <string name="signup_screen_password_hint">At least 6 characters</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="signup_screen_choose">Válassz szakot</string>

    <!--Navigation screen strings-->
    <string name="navigation_screen_general">Általános órarend</string>
    <string name="navigation_screen_own">Saját órarend</string>
    <string name="navigation_screen_profile">Profil</string>

    <!--Options menu strings-->
    <string name="options_screen_food">Napi menü</string>
    <string name="options_screen_second">Második hét</string>
    <string name="options_screen_message">Üzenet</string>
    <string name="options_screen_search">Keresés</string>

    <!--Draw menu strings-->
    <string name="draw_screen_food">Étkezde</string>
    <string name="draw_menu_map">Térkép</string>
    <string name="draw_menu_send_messages">Üzenet kűldése</string>
    <string name="draw_menu_settings">Beállítások</string>
    <string name="draw_menu_messages">Bejövő üzenetek</string>

    <!--Send message strings-->
    <string name="send_message_screen_text_box_hint">Üzenet</string>
    <string name="send_message_screen_send_button">Üzenet küldése</string>
    <string name="send_message_screen_choose">Válassz szakot</string>
    <string name="send_message_screen_choose_department">Melyik csoportoknak szeretnél üzenetet kűldeni?</string>
    <string name="send_message_screen_delete">Törlés</string>
    <string name="send_message_screen_select_save">Mentés</string>
    <string name="send_message_screen_select_cancel">Mégse</string>
    <string name="send_message_screen_selecting">Szak</string>


    <!--Password check strings-->
    <string name="password_check_write">A továbblépéshez, kérem, hogy írja be a jelszavát!</string>
    <string name="password_check_hint">Jelszó</string>
    <string name="password_check_check">Ellenőrzés</string>
    <string name="password_check_exit">Kilépés</string>
    <string name="password_check_image">Kép</string>

    <!--Messages screen string-->
    <string name="messages_screen_messages">Üzeneteid</string>

    <!--Setting screen strings-->
    <string name="settings_screen_alarm">Ébresztő/Emlékeztető</string>
    <string name="settings_screen_save">Mentés</string>

    <!--Own timetable strings-->
    <string name="own_timetable_weekday">Nap</string>
    <string name="own_timetable_class_number">Terem</string>
    <string name="own_timetable_teacher_name">Tanár</string>
    <string name="own_timetable_start">Kezdés</string>
    <string name="own_timetable_end">Végzés</string>
    <string name="own_timetable_class_name">Tantárgy</string>

    <!--Messages screen strings-->
    <string name="messages_screen_date">Dátum</string>
    <string name="messages_screen_sender">Kűldő</string>
    <string name="messages_screen_message">Üzenet</string>





</resources>
