<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginScreen">

    <Button
            android:text="@string/login_screen_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/login_screen_login_button" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
            android:text="@string/login_screen_signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/login_screen_signup_button"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toTopOf="@+id/login_screen_login_button" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:gravity="center_vertical|center_horizontal"/>
    <EditText
            android:layout_height="34dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/login_screen_email" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:hint="@string/login_screen_email"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            app:layout_constraintHorizontal_bias="1.0"
            android:layout_width="0dp" android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:importantForAutofill="no"
            android:autofillHints=""/>
    <EditText
            android:layout_height="wrap_content"
            android:hint="@string/login_screen_phone"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/login_screen_phone"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.0" android:layout_width="0dp"
            android:layout_marginTop="4dp" app:layout_constraintTop_toBottomOf="@+id/textView3"
            android:importantForAutofill="no"
            android:autofillHints=""/>
    <EditText
            android:layout_width="0dp"
            android:hint="@string/login_screen_password"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/login_screen_password" android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:importantForAutofill="no"
            android:autofillHints=""/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.0"
            android:text="@string/login_screen_email"
            android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/login_screen_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/textView4"/>
    <TextView
            android:text="@string/login_screen_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/login_screen_email" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/login_screen_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView5" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/login_screen_phone" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
    <TextView
            android:text="@string/login_screen_guest"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/log_in_screen_guet_text_view" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/login_screen_signup_button"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:gravity="center_vertical|center_horizontal"/>
</android.support.constraint.ConstraintLayout>