<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.activity_send_message">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <EditText
            android:id="@+id/send_message_screen_editText"
            android:layout_width="350dp"
            android:layout_height="350dp"
            android:layout_marginStart="18dp"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:gravity="top|start"
            android:hint="@string/options_screen_message"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:targetApi="o">

            <requestFocus
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </EditText>

        <Button
            android:id="@+id/send_message_screen_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="23dp"
            android:layout_marginLeft="23dp"
            android:layout_marginTop="49dp"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="48dp"
            android:text="@string/send_message_screen_send_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/send_message_screen_deparment_selector"
            app:layout_constraintTop_toBottomOf="@+id/send_message_screen_editText" />

        <Button
            android:id="@+id/send_message_screen_deparment_selector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="49dp"
            android:layout_marginEnd="23dp"
            android:layout_marginRight="23dp"
            android:layout_marginBottom="48dp"
            android:text="@string/send_message_screen_choose"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/send_message_screen_send"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/send_message_screen_editText" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
