<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="wrap_content" android:id="@+id/linearLayout3">

    <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="2dp" android:layout_marginStart="2dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="12dp" android:layout_marginRight="12dp"
            app:cardCornerRadius="16dp"
            app:cardBackgroundColor="@color/colorPrimary" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="0.0">
        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    android:text="@string/messages_screen_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/message_item_time_stemp_text_view"
                    app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                    android:textColor="@color/browser_actions_bg_grey" app:layout_constraintHorizontal_bias="0.0"/>
            <TextView
                    android:text="@string/messages_screen_sender"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/message_ite_send_text_view"
                    android:layout_marginTop="24dp"
                    app:layout_constraintTop_toBottomOf="@+id/message_item_time_stemp_text_view"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:gravity="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="@color/browser_actions_bg_grey" app:layout_constraintHorizontal_bias="0.0"
                    android:textSize="25sp"/>
            <ScrollView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/message_ite_send_text_view" android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp" app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp">
                <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                              android:orientation="vertical">
                    <TextView
                            android:text="@string/messages_screen_messages"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/message_item_content_text_view"
                            tools:layout_editor_absoluteX="190dp"
                            tools:layout_editor_absoluteY="266dp"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:textColor="@color/browser_actions_bg_grey" android:textSize="20sp"/>
                </LinearLayout>
            </ScrollView>
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>
